<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/color_settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.lenovo.lightsettings.MultiSelectListPreference android:persistent="false" android:entries="@array/light_color_entries" android:title="@string/color_coming_call" android:key="light_color_coming_call" android:defaultValue="@string/def_comingcall_color" android:entryValues="@array/light_color_values" />
    <com.lenovo.lightsettings.ColorSelectListPreference android:persistent="false" android:entries="@array/light_color_entries" android:title="@string/color_miss_call" android:key="light_color_miss_call" android:defaultValue="@string/def_misscall_color" android:entryValues="@array/light_color_values" />
    <com.lenovo.lightsettings.ColorSelectListPreference android:persistent="false" android:entries="@array/light_color_entries" android:title="@string/color_unread_msg" android:key="light_color_unread_msg" android:defaultValue="@string/def_unreadmsg_color" android:entryValues="@array/light_color_values" />
    <com.lenovo.lightsettings.ColorSelectListPreference android:persistent="false" android:entries="@array/light_color_entries" android:title="@string/color_sina_weibo_notify" android:key="light_color_sinaweibo_notify" android:defaultValue="@string/def_sinaweibo_color" android:entryValues="@array/light_color_values" />
    <com.lenovo.lightsettings.ColorSelectListPreference android:persistent="false" android:entries="@array/light_color_entries" android:title="@string/color_qq_weibo_notify" android:key="light_color_qqweibo_notify" android:defaultValue="@string/def_qqweibo_color" android:entryValues="@array/light_color_values" />
    <com.lenovo.lightsettings.MultiSelectListPreference android:persistent="false" android:entries="@array/light_color_entries" android:title="@string/color_music" android:key="light_color_music" android:defaultValue="@string/def_music_color" android:entryValues="@array/light_color_values" />
    <com.lenovo.lightsettings.ColorSelectListPreference android:persistent="false" android:entries="@array/light_color_entries" android:title="@string/color_screen_on" android:key="light_color_screen_on" android:defaultValue="@string/def_screenon_color" android:entryValues="@array/light_color_values" />
    <com.lenovo.lightsettings.ColorSelectListPreference android:persistent="false" android:entries="@array/light_color_entries" android:title="@string/color_screen_off" android:key="light_color_screen_off" android:defaultValue="@string/def_screenoff_color" android:entryValues="@array/light_color_values" />
</PreferenceScreen>